--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
+        "moontoast/math": "^1.2",
         "overtrue/laravel-lang": "^3.0",
         "yansongda/pay": "^2.9"
     },
