--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "jxlwqq/quill": "^1.0",
         "laravel/framework": "^7.0",
+        "laravel/horizon": "v4.3.5",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "moontoast/math": "^1.2",
